# sddms

./: .gitignore  Cargo.toml  README.md  auto-evaluate.py  schema.sql
history-verifier/: Cargo.toml
history-verifier/src/: args.rs  history_file_parser.rs  main.rs  organize.rs  serial_view.rs  transaction_id.rs  verify.rs
history-verifier/src/history_file_parser/: action.rs
history-verifier/src/verify/: conflict_diagnosis.rs  conflict_graph.rs  conflict_type.rs
parser-dump/: Cargo.toml
parser-dump/src/: main.rs
proxied-sqlite/: Cargo.toml
proxied-sqlite/src/: args.rs  main.rs  reader.rs  results.rs  sqlite_row_serializer.rs
sddms-central/: Cargo.toml
sddms-central/src/: args.rs  central_service.rs  connection_pool.rs  live_transaction_set.rs  lock_table.rs  main.rs  site_client.rs  transaction_id.rs
sddms-central/src/lock_table/: deadlock_graph.rs  lock_queue_opt.rs  resource_lock.rs
sddms-client/: Cargo.toml
sddms-client/src/: args.rs  main.rs  query_results.rs  reader.rs  site_client.rs  transaction_state.rs
sddms-services/: Cargo.toml  build.rs
sddms-services/proto/: api_result.proto  concurrency_controller.proto  finalize_mode.proto  lock_mode.proto  site_manager.proto
sddms-services/src/: central_controller.rs  lib.rs  response_from_error.rs  shared.rs  site_controller.rs
sddms-services/src/shared/: lock_request.rs
sddms-shared/: Cargo.toml
sddms-shared/src/: error.rs  host_utils.rs  lib.rs  sql_metadata.rs
sddms-site/: Cargo.toml
sddms-site/src/: args.rs  central_client.rs  client_connection.rs  client_connection_map.rs  history_logger.rs  main.rs  site_server.rs  sqlite_row_serializer.rs  transaction_history.rs
sql-trans-gen/: Cargo.toml
sql-trans-gen/src/: args.rs  config.rs  db_schema.rs  main.rs  query_gen.rs  value_generator.rs
sql-trans-gen/src/db_schema/: check_parser.rs  field_info.rs
sql-trans-gen/src/query_gen/: query_specs.rs  random_query_stmt.rs
sql-trans-gen/src/value_generator/: num_gen.rs  text_gen.rs
