[package]
name = "history-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sddms-shared = { path = '../sddms-shared' }
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0.108"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
time = { version = "0.3.30", features = ["parsing"] }
colored = "2.0.4"