[package]
name = "proxied-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ['backup', 'serde_json'] }
sddms-shared = { path = '../sddms-shared' }
rustyline = "12.0.0"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"
serde = "1.0.192"
serde_json = "1.0.108"
tabled = "0.14.0"