[package]
name = "sddms-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sddms-shared = { path = '../sddms-shared' }
sddms-services = { path = '../sddms-services', features = ['site-controller'] }
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
rustyline = "12.0.0"
regex = "1.10.2"
tarpc = "0.33.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
serde = "1.0.192"
serde_json = "1.0.108"
tabled = "0.14.0"