[package]
name = "sddms-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.40.0"
tarpc = { version = "0.33.0", features = ["tokio1", "serde1"] }
serde = "1.0.192"
serde_json = "1.0.108"
serde_cbor = "0.11.2"